# ChangeLog for media-sound/synthv1
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*synthv1-0.7.0 (21 Aug 2015)
*synthv1-0.6.3 (21 Aug 2015)

  21 Aug 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -synthv1-0.6.1.ebuild, -synthv1-0.6.2.ebuild, +synthv1-0.6.3.ebuild,
  +synthv1-0.7.0.ebuild, synthv1-9999.ebuild:
  version bump
  move from base to eutils
  move from qt4-r2 to qmake-utils
  also run qmake on lv2ui
  export QT_SELECT
  fix invalid id headers
  remove old

*synthv1-0.6.2 (01 May 2015)

  01 May 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +synthv1-0.6.2.ebuild:
  version bump

*synthv1-0.6.1 (26 Mar 2015)

  26 Mar 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -synthv1-0.3.6.ebuild, -synthv1-0.4.0.ebuild, -synthv1-0.4.1.ebuild,
  -synthv1-0.5.1.ebuild, +synthv1-0.6.1.ebuild, synthv1-9999.ebuild:
  version bump
  remove old
  move to git upstream
  add qt5 support

*synthv1-0.5.1 (21 Sep 2014)
  21 SEP 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
  +synthv1-0.5.1.ebuild:
  Version bump.


*synthv1-0.4.1 (15 Apr 2014)

  15 Apr 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -synthv1-0.3.3.ebuild, -synthv1-0.3.4.ebuild, -synthv1-0.3.5.ebuild,
  +synthv1-0.4.1:
  Version bump.
  Removed outdated ebuilds.

*synthv1-0.4.0 (08 Mar 2014)

  08 Mar 2014; Matt Henley (nwmatt) <nwmatt@gmail.com>
  +synthv1-0.4.0.ebuild:
  Version bump.

*synthv1-0.3.6 (01 Jan 2014)

  01 Jan 2014; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +synthv1-0.3.6.ebuild:
  Version bump.

*synthv1-0.3.5 (30 Sep 2013)

  30 Sep 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +synthv1-0.3.5.ebuild:
  Version bump.

*synthv1-0.3.4 (16 Jul 2013)

  16 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -synthv1-0.3.2.ebuild, -synthv1-0.3.2-r1.ebuild, +synthv1-0.3.4.ebuild,
  synthv1-9999.ebuild:
  Removed qt4 fix.
  Version bump.
  Removed old ebuilds.
